<resources>
    <string name="app_name">FinalProject</string>
    <string name="signIn">Sign In</string>
    <string name="signUp">Sign Up</string>
    <string name="noAccount">Don\'t have an account?</string>
    <string name="forgotPassword">Forgot your password?</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password:</string>
    <string name="enter_valid_password">Enter Valid Password</string>
    <string name="password">Password:</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="enter_valid_email">Enter Valid Email</string>
    <string name="email">Email:</string>
    <string name="full_name">Full Name:</string>
    <string name="city">Nashville, Tennessee</string>
    <string name="popular">Most Popular</string>
    <string name="happening">Happening this week</string>
    <string name="featured">Featured</string>
    <string name="feed">Your feed</string>
    <string name="login">Login</string>
    <string name="calendar">Calendar</string>
    <string name="back_to_options">Back to Options</string>
    <string name="logout">Logout</string>
    <string name="add_event">Add Event</string>
    <string name="see_profile">See Profile</string>
    <string name="welcome">Welcome</string>
    <string name="name">Name</string>
    <string name="organization">Organization:</string>
    <string name="event_date">Event Date:</string>
    <string name="event_time">Event Time:</string>
    <string name="event_address">Event Address:</string>

</resources>