<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#353535">

    <TextView
        android:id="@+id/signIn_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signIn"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="56dp"
        tools:layout_editor_absoluteY="101dp" />

    <TextView
        android:id="@+id/noAccount_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/noAccount"
        android:textColor="@android:color/darker_gray"
        tools:layout_editor_absoluteX="56dp"
        tools:layout_editor_absoluteY="184dp" />

    <TextView
        android:id="@+id/signUp_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signUp"
        android:textColor="#2B3FFF"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="296dp"
        tools:layout_editor_absoluteY="184dp" />

    <TextView
        android:id="@+id/email_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="56dp"
        tools:layout_editor_absoluteY="228dp" />

    <TextView
        android:id="@+id/password_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="56dp"
        tools:layout_editor_absoluteY="325dp" />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgotPassword"
        android:textColor="@android:color/darker_gray"
        tools:layout_editor_absoluteX="56dp"
        tools:layout_editor_absoluteY="410dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="353dp"
        android:layout_height="55dp"
        android:background="#3F51B5"
        android:backgroundTint="#3F51B5"
        android:backgroundTintMode="src_over"
        android:text="@string/signIn"
        app:cornerRadius="3dp"
        tools:layout_editor_absoluteX="31dp"
        tools:layout_editor_absoluteY="629dp" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="Name"
        tools:layout_editor_absoluteX="55dp"
        tools:layout_editor_absoluteY="254dp" />

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="Name"
        tools:layout_editor_absoluteX="56dp"
        tools:layout_editor_absoluteY="355dp" />
</androidx.constraintlayout.widget.ConstraintLayout>